<resources>
    <string name="app_name">BlogReader</string>
    <string name="Fragment_1">Fragment_1</string>
    <string name="Fragment_2">Fragment_2</string>
    <string name="Fragment_3">Fragment_3</string>
    <string name="Fragment_4">Fragment_4</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="don_t_push_red_button">DON\'T PUSH RED BUTTON</string>
    <string name="pusher">Жмякер</string>
    <string name="push">ЖМЯК-ЖМЯК</string>
    <string name="settings_too">settings too</string>

    <string name="info">Подробно</string>
    <string name="connect">Connect</string>
    <string name="test">Test</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="Image_Url">url</string>
    <string name="image">image</string>
    <string name="menu">menu</string>
</resources>
