<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/red_button"
        android:icon="@drawable/ic_big_red_button_24dp"
        android:orderInCategory="100"
        android:title="@string/don_t_push_red_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/pusher"
        android:orderInCategory="100"
        android:title="@string/pusher"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_too"
        android:orderInCategory="100"
        android:title="@string/settings_too"
        app:showAsAction="never" />
</menu>