<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment1"
            android:icon="@drawable/ic_filter_1_black_24dp"
            android:title="@string/fragment_1"
        />
        <item
            android:id="@+id/fragment2"
            android:icon="@drawable/ic_filter_2_black_24dp"
            android:title="@string/Fragment_2"
            />
        <item
            android:id="@+id/fragment3"
            android:icon="@drawable/ic_filter_3_black_24dp"
            android:title="@string/Fragment_3"
            />
        <item
            android:id="@+id/fragment4"
            android:icon="@drawable/ic_filter_4_black_24dp"
            android:title="@string/Fragment_4"
            />
    </group>
</menu>